RESOLVED FIXED105909
Regression(r138607): Causes crashes related to WebIconDatabase
https://bugs.webkit.org/show_bug.cgi?id=105909
Summary Regression(r138607): Causes crashes related to WebIconDatabase
Chris Dumez
Reported 2013-01-02 01:04:18 PST
After <http://trac.webkit.org/changeset/138607>, we started to experience a lot of crashes such as: 20:33:03.001 19851 worker/1 http/tests/css/border-image-loading.html crashed, (stderr lines): 20:33:03.002 19851 1 0x7f88965a05e8 20:33:03.002 19851 2 0x7f8893ccb4a0 20:33:03.002 19851 3 0x7f8895d7d690 WebKit::WebIconDatabase::isOpen() 20:33:03.002 19851 4 0x7f8895d7d6d3 WebKit::WebIconDatabase::setDatabasePath(WTF::String const&) 20:33:03.002 19851 5 0x410c0e WTR::TestController::initialize(int, char const**) 20:33:03.002 19851 6 0x411a86 WTR::TestController::TestController(int, char const**) 20:33:03.002 19851 7 0x40bf44 main 20:33:03.002 19851 8 0x7f8893cb676d __libc_start_main 20:33:03.002 19851 9 0x40bf91
Attachments
Patch (1.40 KB, patch)
2013-01-02 01:40 PST, Chris Dumez
no flags
Patch (1.41 KB, patch)
2013-01-02 01:44 PST, Chris Dumez
no flags
Patch (1.32 KB, patch)
2013-01-02 01:48 PST, Chris Dumez
no flags
Patch (1.31 KB, patch)
2013-01-02 01:56 PST, Chris Dumez
gyuyoung.kim: review+
Chris Dumez
Comment 1 2013-01-02 01:40:30 PST
Created attachment 181013 [details] Patch Uploading a patch in case someone is able to test it before I can. Sadly, I did not have a fresh build and it is taking a while here..
Chris Dumez
Comment 2 2013-01-02 01:44:49 PST
Chris Dumez
Comment 3 2013-01-02 01:48:36 PST
Chris Dumez
Comment 4 2013-01-02 01:51:52 PST
Comment on attachment 181015 [details] Patch Ok, this patch seems to resolve the issue for me.
Chris Dumez
Comment 5 2013-01-02 01:56:51 PST
Created attachment 181017 [details] Patch Fix typo in Changelog.
Gyuyoung Kim
Comment 6 2013-01-02 02:05:47 PST
Comment on attachment 181017 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=181017&action=review rs=me > Source/WebKit2/ChangeLog:3 > + Regression(r138607) Causes crashes related to WebIconDatabase Missing ":" in Regression(r138607) ?
Chris Dumez
Comment 7 2013-01-02 02:10:34 PST
Laszlo Gombos
Comment 8 2013-01-02 07:10:10 PST
*** Bug 105911 has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 9 2013-01-02 08:32:09 PST
Note You need to log in before you can comment on or make changes to this bug.