Regression(r138607): Causes crashes related to WebIconDatabase https://bugs.webkit.org/show_bug.cgi?id=105909

Reviewed by Gyuyoung Kim.

Add back WebIconDatabase initialization statement
in WebContext constructor. It was removed in
r138607 and causing a lot of crashes on WebKit2.

* UIProcess/WebContext.cpp:
(WebKit::WebContext::WebContext):

Canonical link: https://commits.webkit.org/124097@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@138613 268f45cc-cd09-0410-ab3c-d52691b4dbfc